hphp/hack/test/typecheck/ffp/function_private_bad.php.exp
File "function_private_bad.php", line 4, characters 7-12:
Top-level functions cannot be declared private (Parsing[1002])
